# cswire

./: Cargo.toml  README.md  TODO.md  lifetime.md
src/: _lib.rs  alloc.rs  ark_poseidon.rs  assign.rs  binary_ops.rs  cswire.rs  expr.rs  extract.rs  from.rs  lib.rs  lifetime.rs  linear.rs  ops.rs  poseidon.rs  quadratic.rs  switchboard.rs  tests.rs  utils.rs  variables.rs  wire.rs  wires.rs
src/old/: ark_poseidon.rs  expr.rs  tests.rs
src/var/: binary_ops.rs  from.rs  mod.rs  tests.rs
