[package]
name = "cswire"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["sponge", "r1cs"] }
itertools = "0.14.0"
rayon = "1.10.0"
smallvec = "1.15.1"

[dev-dependencies]
ark-bn254 = "0.5.0"
ark-std = "0.5.0"

[profile.release]
debug = true

